Replace vendored libraries with managed dependencies